// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`contact-planning-inspectorate-date GET /change should render the contactPlanningInspectorateDate change page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <div class="govuk-date-input" id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render application submission date change page if day is not valid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-day">The date you contacted the Planning Inspectorate must include a day</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate must include a day</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="06" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="2021" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render application submission date change page if day is not valid 2`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-day">The date you contacted the Planning Inspectorate day must be a number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate day must be a number</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="a" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="06" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="2021" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render application submission date change page if day is not valid 3`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-day">The date you contacted the Planning Inspectorate day must be between 1 and 31</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate day must be between 1 and 31</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="0" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="06" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="2021" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render application submission date change page if day is not valid 4`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-day">The date you contacted the Planning Inspectorate day must be between 1 and 31</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate day must be between 1 and 31</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="32" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="06" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="2021" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render the Date page with an error message if the provided date month is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-month">The date you contacted the Planning Inspectorate must include a month</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate must include a month</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="1" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="2021" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render the Date page with an error message if the provided date month is invalid 2`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-month">The date you contacted the Planning Inspectorate must be a real date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate must be a real date</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="1" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="a" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="2021" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render the Date page with an error message if the provided date month is invalid 3`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-month">The date you contacted the Planning Inspectorate month must be between 1 and 12</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate month must be between 1 and 12</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="1" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="0" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="2021" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render the Date page with an error message if the provided date month is invalid 4`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-month">The date you contacted the Planning Inspectorate month must be between 1 and 12</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate month must be between 1 and 12</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="1" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="13" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="2021" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render the Date page with an error message if the provided date year is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-year">The date you contacted the Planning Inspectorate must include a year</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate must include a year</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="1" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="Jul" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render the Date page with an error message if the provided date year is invalid 2`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-year">The date you contacted the Planning Inspectorate year must be a number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate year must be a number</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="1" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="Jul" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="a" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render the Date page with an error message if the provided date year is invalid 3`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-year">The date you contacted the Planning Inspectorate year must be 4 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate year must be 4 digits</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="1" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="Jul" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="202" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`contact-planning-inspectorate-date POST /change should re-render the Date page with an error message if the provided date year is invalid 4`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#contact-planning-inspectorate-date-day">The date you contacted the Planning Inspectorate must be today or in the past</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="contact-planning-inspectorate-date-hint contact-planning-inspectorate-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> When did you contact the Planning Inspectorate?</h1>
                                </legend>
                                <div id="contact-planning-inspectorate-date-hint" class="govuk-hint">For example, 31 3 2024</div>
                                <p id="contact-planning-inspectorate-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date you contacted
                                    the Planning Inspectorate must be today or in the past</p>
                                <div class="govuk-date-input"
                                id="contact-planning-inspectorate-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-day" name="contact-planning-inspectorate-date-day"
                                            type="text" value="1" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-month" name="contact-planning-inspectorate-date-month"
                                            type="text" value="Jul" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="contact-planning-inspectorate-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="contact-planning-inspectorate-date-year" name="contact-planning-inspectorate-date-year"
                                            type="text" value="3000" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
